--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -8,9 +8,9 @@
             </mat-card-content>
         </mat-card>
     </div>
-    <div align="center" class="mb-1em">
+    <!--<div align="center" class="mb-1em">
         <b>Valor neto de giro:</b> {{ valorNetoGiro | currency:'':'symbol-narrow':'.0-0' }}
-    </div>
+    </div>-->
 
     <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
         <form [formGroup]="addressForm">
