--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/tercero-causacion/tercero-causacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/tercero-causacion/tercero-causacion.component.html
@@ -5,10 +5,10 @@
             <p><b>Nombre de contratista:</b> <i> {{ solicitudPago.contratoSon.contratacion.contratista.nombre }} </i> </p>
         </mat-card-content>
     </mat-card>
-    
-    <div class="mt-1em text-center">
+
+    <!--<div class="mt-1em text-center">
         <p>Valor neto de giro: <b> {{ valorNetoGiro | currency: '':'symbol-narrow':'.0-0' }} </b></p>
-    </div>
+    </div>-->
 
     <form [formGroup]="addressForm" (ngSubmit)="guardar()">
         <mat-accordion formArrayName="criterios" *ngFor="let criterio of criterios.controls; index as i">
@@ -18,7 +18,7 @@
                         {{ firstLetterUpperCase( criterio.get( 'nombre' ).value ) }}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-    
+
                     <mat-card formArrayName="conceptos" class="shipping-card" *ngFor="let concepto of getConceptos( i ).controls; index as j">
                         <mat-card-header class="header-card header-card--margin">
                             <mat-card-title class="header-card--text">
@@ -145,15 +145,15 @@
                                     <img src="assets/img/icon/guardar.svg">
                                 </button>
                             </div>
-            
+
                             <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="criterio.get( 'historialObservaciones' ).value.length > 0">
                                 <table mat-table [dataSource]="getDataSource( criterio.get( 'historialObservaciones' ).value )" matSort>
-                              
+
                                     <ng-container matColumnDef="fechaRevision">
                                       <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
                                       <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
                                     </ng-container>
-                              
+
                                     <ng-container matColumnDef="responsable">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
                                         <td mat-cell *matCellDef="let element" align="center" class="color-text">
@@ -164,21 +164,21 @@
                                             </div>
                                         </td>
                                     </ng-container>
-                              
+
                                     <ng-container matColumnDef="historial">
                                       <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
                                       <td mat-cell *matCellDef="let element" align="center" class="color-text">
                                           <section [innerHTML]="element.observacion"></section>
                                       </td>
                                     </ng-container>
-                                
+
                                   <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
                                   <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
                                 </table>
                             </section>
                     </ng-template>
                     -->
-            </mat-expansion-panel> 
+            </mat-expansion-panel>
         </mat-accordion>
     </form>
 </section>
