--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -484,7 +484,7 @@
                                                                                                     formControlName="valorDescuento"
                                                                                                     (keypress)="validateNumberKeypress($event)"
                                                                                                     onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
-                                                                                                    (ngModelChange)="validateDiscountValue( $event, i, j , k, l )"
+                                                                                                    (ngModelChange)="validateDiscountValue( $event, i, j , k, l ); validateMaxAportante( $event, i, j , k, l, aportanteDescuento.get('nombreAportante').value, getAportantes( i, j ).controls)"
                                                                                                     oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                                                                                     [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                                                                         </mat-form-field>
