--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/aprobar-incorporacion-rendimientos/aprobar-incorporacion-rendimientos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/aprobar-incorporacion-rendimientos/aprobar-incorporacion-rendimientos.component.html
@@ -33,7 +33,7 @@
         <table mat-table [dataSource]="dataSource" matSort matSortActive="fechaCargue"  matSortDirection="desc" class="mat-elevation-z8">
             <ng-container matColumnDef="fechaCargue">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de cargue </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCargue }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCargue | date: 'dd/MM/yyyy h:mm a' }}</b> </td>
             </ng-container>
             <ng-container matColumnDef="registrosIncorporados">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número total de registros incorporados</th>
