--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/contratistas-gbftrec/contratistas-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/contratistas-gbftrec/contratistas-gbftrec.component.html
@@ -6,8 +6,8 @@
     </mat-card-header>
     <mat-card-content style="text-align: left;">
         <p><strong>Nit: </strong><em>{{ contratista.numeroIdentificacion}}</em></p>
-        <p><strong>Representante legal: </strong><em>{{ contratista.representanteLegal}}</em></p>
-        <p><strong>Número de identificación del representante: </strong><em>{{ contratista.representanteLegalNumeroIdentificacion}}</em></p>
-        <p><strong>Valor pagado: </strong><em> {{ valorPagadoContratista | currency:'':'symbol-narrow':'.0-0' }} </em></p>
+    <p><strong>Representante legal: </strong><em>{{ contratista.representanteLegal}}</em></p>
+    <p><strong>Número de identificación del representante: </strong><em>{{ contratista.representanteLegalNumeroIdentificacion ? contratista.representanteLegalNumeroIdentificacion : 'No se registra' }}</em></p>
+    <p><strong>Valor facturado: </strong><em> {{ valorPagadoContratista | currency:'':'symbol-narrow':'.0-0' }} </em></p>
     </mat-card-content>
 </mat-card>
