--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/lista-contratistas-gtlc/lista-contratistas-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/lista-contratistas-gtlc/lista-contratistas-gtlc.component.html
@@ -7,7 +7,7 @@
     <mat-card-content style="text-align: left;">
         <p><strong>Nit: </strong><em>{{ contratista.numeroIdentificacion}}</em></p>
         <p><strong>Representante legal: </strong><em>{{ contratista.representanteLegal}}</em></p>
-        <p><strong>Número de identificación del representante: </strong><em>{{ contratista.representanteLegalNumeroIdentificacion}}</em></p>
-        <p><strong>Valor pagado: </strong><em> {{ valorPagadoContratista | currency:'':'symbol-narrow':'.0-0' }} </em></p>
+        <p><strong>Número de identificación del representante: </strong><em>{{ contratista.representanteLegalNumeroIdentificacion ? contratista.representanteLegalNumeroIdentificacion : 'No se registra' }}</em></p>
+        <p><strong>Valor facturado: </strong><em> {{ valorPagadoContratista | currency:'':'symbol-narrow':'.0-0' }} </em></p>
     </mat-card-content>
   </mat-card>
