--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-contratistas/detalle-contratistas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-contratistas/detalle-contratistas.component.html
@@ -5,9 +5,9 @@
       </mat-card-title>
   </mat-card-header>
   <mat-card-content style="text-align: left;">
-      <p><strong>Nit: </strong><em>{{ contratista.numeroIdentificacion}}</em></p>
-      <p><strong>Representante legal: </strong><em>{{ contratista.representanteLegal}}</em></p>
-      <p><strong>Número de identificación del representante: </strong><em>{{ contratista.representanteLegalNumeroIdentificacion}}</em></p>
-      <p><strong>Valor pagado: </strong><em> {{ valorPagadoContratista | currency:'':'symbol-narrow':'.0-0' }} </em></p>
-  </mat-card-content>
+    <p><strong>Nit: </strong><em>{{ contratista.numeroIdentificacion}}</em></p>
+    <p><strong>Representante legal: </strong><em>{{ contratista.representanteLegal}}</em></p>
+    <p><strong>Número de identificación del representante: </strong><em>{{ contratista.representanteLegalNumeroIdentificacion ? contratista.representanteLegalNumeroIdentificacion : 'No se registra' }}</em></p>
+    <p><strong>Valor facturado: </strong><em> {{ valorPagadoContratista | currency:'':'symbol-narrow':'.0-0' }} </em></p>
+</mat-card-content>
 </mat-card>
