--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
@@ -25,8 +25,13 @@
                 {{detailavailabilityBudget?.rubroPorFinanciar}}
             </p>
             <p>
-                <strong>Valor de la solicitud:</strong>
-                {{detailavailabilityBudget?.valorSolicitud | currency:'':'symbol':'3.0'}}
+              <strong>Valor de la solicitud:</strong>
+              {{detailavailabilityBudget?.valorSolicitud | currency:'':'symbol':'3.0'}}
+            </p>
+            <p *ngIf="detailavailabilityBudget?.novedadContractual">
+              <strong>Valor después de la modificación:</strong>
+              <span *ngIf="!(detailavailabilityBudget?.estadoSolicitudCodigo == '5' || detailavailabilityBudget?.estadoSolicitudCodigo == '8')">{{detailavailabilityBudget?.valorTotalDisponibilidad + detailavailabilityBudget?.novedadContractual.novedadContractualDescripcion[0].presupuestoAdicionalSolicitado | currency:'':'symbol':'3.0'}}</span>
+              <span *ngIf="(detailavailabilityBudget?.estadoSolicitudCodigo == '5' || detailavailabilityBudget?.estadoSolicitudCodigo == '8')">{{detailavailabilityBudget?.valorTotalDisponibilidad | currency:'':'symbol':'3.0'}}</span>
             </p>
             <p *ngIf="detailavailabilityBudget?.tipoSolicitudCodigo==pTipoDDP.DDP_tradicional">
                 <strong>Plazo:</strong>
