--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validacion-presupuestal/validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validacion-presupuestal/validacion-presupuestal.component.html
@@ -53,8 +53,9 @@
                 Adición
             </p>
             <p *ngIf="detailavailabilityBudget?.novedadContractual">
-                <strong>Valor después de la modificación:</strong>
-                {{detailavailabilityBudget?.valorTotalDisponibilidad + detailavailabilityBudget?.novedadContractual.novedadContractualDescripcion[0].presupuestoAdicionalSolicitado | currency:'':'symbol':'3.0'}}
+              <strong>Valor después de la modificación:</strong>
+              <span *ngIf="!(detailavailabilityBudget?.estadoSolicitudCodigo == '5' || detailavailabilityBudget?.estadoSolicitudCodigo == '8')">{{detailavailabilityBudget?.valorTotalDisponibilidad + detailavailabilityBudget?.novedadContractual.novedadContractualDescripcion[0].presupuestoAdicionalSolicitado | currency:'':'symbol':'3.0'}}</span>
+              <span *ngIf="(detailavailabilityBudget?.estadoSolicitudCodigo == '5' || detailavailabilityBudget?.estadoSolicitudCodigo == '8')">{{detailavailabilityBudget?.valorTotalDisponibilidad | currency:'':'symbol':'3.0'}}</span>
             </p>
             <p *ngIf="detailavailabilityBudget?.novedadContractual?.novedadContractualDescripcion[0].plazoAdicionalMeses">
                 <strong>Plazo  de la modificación:</strong>
