FFIE-138 , control recursos

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/control-de-recursos/control-de-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/control-de-recursos/control-de-recursos.component.html
@@ -388,4 +388,4 @@
     <!-- {{addressForm.value | json}}  -->
   </pre>
 
-<app-table-control-recursos [esVerDetalle] = 'esVerDetalle'></app-table-control-recursos>
+<app-table-control-recursos [esVerDetalle] = 'esVerDetalle' [valorComprometidoDDP] = 'this.fuente?.comprometidoEnDdp'></app-table-control-recursos>
