cambiar-contraseña.svg

--- a/asivamosffie.web/asivamosffie/src/app/shared/components/navbar/navbar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/shared/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         Video tutoriales
     </a>
     <a mat-button routerLink="/cambiarContrasena">
-        <img class="navbar--icon" src="assets/img/icon/navbar/cambiar-contraseña.svg" alt="Cambiar contraseña">
+        <img class="navbar--icon" src="assets/img/icon/navbar/cambiar-contrasenia.svg" alt="Cambiar contraseña">
         Cambiar contraseña
     </a>
     <button mat-button (click)="logout()">
