--- a/asivamosffie.web/asivamosffie/src/app/shared/components/navbar/navbar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/shared/components/navbar/navbar.component.html
@@ -1,29 +1,38 @@
-<nav
-    class="navbar"
-    [class.navbar__close]="!responsiveOpen"
->
-    <!-- <a mat-button routerLink="/home" routerLinkActive="active"> -->
-    <button mat-button class="navbar--icon-menu-responsive" (click)="responsiveOpen = !responsiveOpen">
-        <img class="navbar--icon" src="assets/img/icon/navbar/menu-responsive.svg" alt="Menú principal">
-    </button>
-    <a mat-button class="animatedDown" routerLink="/home">
-        <img class="navbar--icon" src="assets/img/icon/navbar/menu.svg" alt="Menú principal">
-        Menú principal
+<nav class="navbar" [class.navbar__close]="!responsiveOpen">
+  <!-- <a mat-button routerLink="/home" routerLinkActive="active"> -->
+  <button mat-button class="navbar--icon-menu-responsive" (click)="responsiveOpen = !responsiveOpen">
+    <img class="navbar--icon" src="assets/img/icon/navbar/menu-responsive.svg" alt="Menú principal" />
+  </button>
+  <a mat-button class="animatedDown" routerLink="/home">
+    <img class="navbar--icon" src="assets/img/icon/navbar/menu.svg" alt="Menú principal" />
+    Menú principal
+  </a>
+  <button mat-button class="animatedDown" [matMenuTriggerFor]="menuManuales">
+    <img class="navbar--icon" src="assets/img/icon/navbar/manuales.svg" alt="Manuales instructivos" />
+    Manuales instructivos
+  </button>
+  <mat-menu #menuManuales="matMenu">
+    <a mat-menu-item href="assets/documents/1.-Manual-FFIE_Direccion-Tecnica.pdf" download>Dirección Tecnica</a>
+    <a mat-menu-item href="assets/documents/2.-Manual-FFIE_Direccion-Financiera.pdf" download>Dirección Financiera</a>
+    <a mat-menu-item href="assets/documents/3.-Manual-FFIE_Direccion-Juridica.pdf" download>Dirección Juridica</a>
+    <a mat-menu-item href="assets/documents/4.-Manual-FFIE_Fiduciaria.pdf" download>Fiduciaria</a>
+    <a mat-menu-item href="assets/documents/5.-Manual-FFIE_Administrador.pdf" download>Administrador</a>
+  </mat-menu>
+  <button mat-button class="animatedDown" [matMenuTriggerFor]="menuVideoTutoriales">
+    <img class="navbar--icon" src="assets/img/icon/navbar/Video-tutorial.svg" alt="Video tutoriales" />
+    Video tutoriales
+  </button>
+  <mat-menu #menuVideoTutoriales="matMenu">
+    <a *ngFor="let videoTutorial of videoTutoriales" mat-menu-item [href]="videoTutorial.descripcion" target="_blank">
+      {{ videoTutorial.nombre }}
     </a>
-    <a mat-button class="animatedDown" routerLink="/home">
-        <img class="navbar--icon" src="assets/img/icon/navbar/manuales.svg" alt="Manuales instructivos">
-        Manuales instructivos
-    </a>
-    <a mat-button class="animatedDown" routerLink="/home">
-        <img class="navbar--icon" src="assets/img/icon/navbar/Video-tutorial.svg" alt="Video tutoriales">
-        Video tutoriales
-    </a>
-    <a mat-button class="animatedDown" routerLink="/cambiarContrasena">
-        <img class="navbar--icon" src="assets/img/icon/navbar/cambiar-contrasenia.svg" alt="Cambiar contraseña">
-        Cambiar contraseña
-    </a>
-    <button mat-button class="animatedDown" (click)="logout()">
-        <img class="navbar--icon" src="assets/img/icon/navbar/cerrar-sesion.svg" alt="Cerrar sesión">
-        Cerrar sesión
-    </button>
+  </mat-menu>
+  <a mat-button class="animatedDown" routerLink="/cambiarContrasena">
+    <img class="navbar--icon" src="assets/img/icon/navbar/cambiar-contrasenia.svg" alt="Cambiar contraseña" />
+    Cambiar contraseña
+  </a>
+  <button mat-button class="animatedDown" (click)="logout()">
+    <img class="navbar--icon" src="assets/img/icon/navbar/cerrar-sesion.svg" alt="Cerrar sesión" />
+    Cerrar sesión
+  </button>
 </nav>
