--- a/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
@@ -74,6 +74,15 @@ strong {
   text-align: left;
 }
 
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.border-none {
+  border: none;
+}
+
 .mat-button.btn-regresar {
   height: 2em;
   padding: 0;
